# auto-ventas-arquitectura

./: .gitignore  ejercicio_practico.md  referencia_erp_actual.md
.github/workflows/: ci.yml
docs/: diseno-arquitectura.md
docs/superpowers/specs/: 2026-07-06-portal-auto-ventas-design.md
piloto-cotizacion/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
piloto-cotizacion/docs/adr/: 0001-arquitectura-hexagonal.md  0002-degradacion-de-socios.md  0003-un-puerto-dos-adaptadores.md
piloto-cotizacion/src/cotizacion/: config.py  main.py
piloto-cotizacion/src/cotizacion/adapters/inbound/rest/: deps.py  router.py  schemas.py
piloto-cotizacion/src/cotizacion/adapters/outbound/: aseguradora_http.py  aseguradora_mock.py  banco_http.py  banco_mock.py  catalogo_http.py  erp_catalogo_mock.py  repo_memoria.py
piloto-cotizacion/src/cotizacion/application/: crear_cotizacion.py  ports.py
piloto-cotizacion/src/cotizacion/domain/: calculo.py  cotizacion.py  dinero.py  vehiculo.py
piloto-cotizacion/tests/adapters/: test_catalogo_http.py  test_router.py  test_socios_http.py
piloto-cotizacion/tests/application/: test_crear_cotizacion.py
piloto-cotizacion/tests/domain/: test_calculo.py  test_dinero.py
piloto-reserva/: Dockerfile  README.md  pyproject.toml
piloto-reserva/src/reserva/: config.py  main.py
piloto-reserva/src/reserva/application/: crear_reserva.py  ports.py
piloto-reserva/tests/adapters/: test_cotizacion_http.py  test_router.py
piloto-reserva/tests/application/: test_crear_reserva.py
(+7 files in other folders)
